--- a/maci_backend/Backend.csproj
+++ b/maci_backend/Backend.csproj
@@ -41,7 +41,7 @@
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
     <PackageReference Include="AWSSDK.EC2" Version="3.3.42.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="LibGit2Sharp.Portable" Version="0.24.10" />
+    <PackageReference Include="LibGit2Sharp" Version="0.26" />
   </ItemGroup>
 
 </Project>
